# archivist

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  default.nix  docker-compose.yaml  flake.nix
.builds/: clippy.yml  docker.yml
.sqlx/: query-02a5c98e001541c409f834b09def6c73d608e7eb21c4d9861352b700502e8619.json  query-0621606daf5f4b6e8d301240672cb3d0c3f2afa291dc02bf88ec3a6d02401ca4.json  query-089310fc9117c80e00ffae97f121edd48c5337536724fba945e9261516590c45.json  query-08c29d0c3d78abf4eb62c6e0442db5432e9de1b8f43bff497046a9a76c3809f6.json  query-11e661c210e4afc787b3efc568620e6a0098247c5d0a554954d7b48a6eaa0007.json  query-1305835190f706a8c419e032ad1f91d06521e1d490d19dbff513cfccacbdff74.json  query-1fa2bf6d7d708a06ef8617432d9b4e2434cfb940c3cd11ee0dc0b5647e69604e.json  query-30372ae94ec59f0d58ce556f7edcc137713c71601f2f0678c7bd7ecddb0d41e2.json  query-320cac6659f7d181b588bb3063e6426a5df75f92019872e4b71ca92a2112c7a6.json  query-324bc952a83050541e93308a83c3ec46e1ac0e1b20560232a63d7c6e43415db7.json  query-3287c553c160bd72f1f7980e8858336c4e150300c3449477af548860e53179cb.json  query-4651482cdbaf3e6da9394200d9314cba8ef7705b32e22d3deb262695936e4983.json  query-47a516f8abcd8cba8da050409a861c22f83e412d376b50b37046fd8e9bf89b32.json  query-5b4fb9502354e7b9de8c0c6e99c7b48f35812ec83752781ed969ebd7e5090adb.json  query-5b638fcff29c0df3a163f2a626d24a65d5024c3d429dfa75a8868c2f4e45d7c3.json  query-6245385f2241dced6035dcf6c2820c408ada8672faba08e2e844ae747fd697d2.json  query-6ccc185bb30aa91d6c748d93ca63d42d4744bba49b510ada5366e8cf9a2c1369.json  (+18 more)
db/: init.sql
src/: config.rs  (+5 more)
(+7 files in other folders)
