[package]
name = "archivist"
description = "Core SearXiv service which manages scrapers tasks"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
log = "0.4.21"
thiserror = "1.0.57"
sqlx = { version = "0.7", features = [
  "postgres",
  "chrono",
  "runtime-tokio",
  "tls-rustls",
] }
actix-web = { version = "4.5.1", features = ["rustls"] }
utoipa = { version = "4", features = ["actix_extras", "chrono"] }
utoipa-rapidoc = { version = "3", features = ["actix-web"] }
anyhow = "1.0.80"
env_logger = "0.11.2"
chrono = { version = "0.4.34", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
figment = { version = "0.10.14", features = ["env"] }
serde_json = "1.0.114"
clokwerk = "0.4.0"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread"] }
actix-multipart = "0.6.1"
futures = "0.3.30"
lazy_static = "1.4.0"
